Finished, all that's left is to summarize

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -2,43 +2,43 @@
 
 The big protocol wikipedia.
 
-| TABLE OF CONTENTS | _________________________________________________________________________________________________________________ |
-| :-------------------------------------------------------------------- | ------------------------------------------------------------: |
-| [ICMP](#internet-control-message-protocol-aka-icmp)                   | Internet Control Message protocol                             |
-| [DNS](#domain-name-system-aka-dns)                                    | Domain Name System                                            |
-| [LLMNR](#link-local-multicast-name-resolution-aka-llmnr)              | Link-Local Multicast Name Resolution                          |
-| [DHCP](#dynamic-host-configuration-protocol-aka-dhcp)                 | Dynamic Host Configuration Protocol                           |
-| [NetBIOS](#network-basic-inputoutput-system-aka-netbios)              | Network Basic Input Output System                             |
-| [Telnet](#teletype-network-aka-telnet)                                | Teletype Network                                              |
-| [FTP](#file-transfer-protocol-aka-ftp)                                | File Tranfer Protocol                                         |
-| [TFTP](#trivial-file-transfer-protocol-aka-tftp)                      | Trivial File Tranfer Protocol                                 |
-| [HTTP](#hypertext-transfer-protocol-aka-http)                         | Hypertext Tranfer Protocol                                    |
-| [SMTP](#simple-mail-transfer-protocol-aka-smtp)                       | Simple Mail Tranfer Protocol                                  |
-| [POP](#post-office-protocol-3-aka-pop3)                               | Post Office Protocol                                          |
-| [IMAP](#internet-message-access-protocol-aka-imap)                    | Internet Message Access Protocol                              |
-| [SMB](#server-message-blocking-protocol-aka-smb)                      | Server Message Blocking                                       |
-| [SNMP](#simple-network-management-protocol-aka-snmp)                  | Simple Network Management Protocol                            |
-| [NTP](#network-time-protocol-aka-ntp)                                 | Network Time Protocol                                         |
-| [TLS/SSL](#transport-layer-security--secure-socket-layer-aka-tlsssl)  | Transport Layer Security / Secure Socket Layer                |
-| > [TLS 1.2 - Handshake Protocol](#handshake-protocol-ssl-30---tls-12) | SSL 3.0 - TLS 1.2 Handshake Protocol                          |
-| > [Change Cipher Protocol](#change-cipher-spec-protocol)              | SSL Change Cipher Protocol                                    |
-| > [TLS 1.3 - Handshake Protocol](#handshake-protocol-tls-13)          | TLS 1.3 Handshake Protocol                                    |
-| > [Alert Protocol](#alert-protocol)                                   | TLS/SSL Alert Protocol                                        |
-| > [Record Protocol](#record-prtocol)                                  | TLS/SSL Record Layer Protocol                                 |
-| [HTTPS](#hypertext-transfer-protocol-over-tlsssl-aka-https)           | Hypertext Tranfer Protocol over TLS/SSL                       |
-| [IPsec](#internet-protocol-security-aka-ipsec)                        | Internet Protocol Security Suite                              |
-| > [IKEv1.0](#ikev10)                                                  | Internet Key Exchange Protocol ver 1.0                        |
-| > [IKEv2.0](#ikev20)                                                  | Internet Key Exchange Protocol ver 2.0                        |
-| > [AH Protocol](#authenticationi-header-ah-protocol)                  | Authentication Header Protocol                                |
-| > [ESP](#encapsulation-security-protocol-esp)                         | Encapsulation Security Protocol                               |
-| [SSH](#secure-shell-aka-ssh)                                          | Secure Shell                                                  |
-| > [SSH Transport Layer Protocol](#ssh-transport-layer-protocol)       | SSH Transport Layer Protocol                                  |
-|> [SSH User Authentication Protocol](#ssh-user-authentication-protocol)| SSH User Authentication Protocol                              |
-| > [SSH Communication Protocol](#ssh-connection-protocol)              | SSH Communication Protocol                                    |
-| [RDP](#remote-desktop-protocol-aka-rdp)                               | Remote Desktop Protocol                                       |
-| [MS-SSTDS](#microsoft-sql-server-tubular-data-stream-aka-ms-sstds)    | Microsoft SQL Server Tubular Data Stream (MSSQL)              |
-| [LDAP](#lighweight-directory-access-protocol-aka-ldap)                | Lighweight Directory Access protocol                          |
-| [Modbus](#modbus)                                                     | Modbus                                                        |
+| TABLE OF CONTENTS | ___________________________________________________________________________________________________________________ |
+| :---------------------------------------------------------------------- | ------------------------------------------------------------: |
+| [ICMP](#internet-control-message-protocol-aka-icmp)                     | Internet Control Message protocol                             |
+| [DNS](#domain-name-system-aka-dns)                                      | Domain Name System                                            |
+| [LLMNR](#link-local-multicast-name-resolution-aka-llmnr)                | Link-Local Multicast Name Resolution                          |
+| [DHCP](#dynamic-host-configuration-protocol-aka-dhcp)                   | Dynamic Host Configuration Protocol                           |
+| [NetBIOS](#network-basic-inputoutput-system-aka-netbios)                | Network Basic Input Output System                             |
+| [Telnet](#teletype-network-aka-telnet)                                  | Teletype Network                                              |
+| [FTP](#file-transfer-protocol-aka-ftp)                                  | File Tranfer Protocol                                         |
+| [TFTP](#trivial-file-transfer-protocol-aka-tftp)                        | Trivial File Tranfer Protocol                                 |
+| [HTTP](#hypertext-transfer-protocol-aka-http)                           | Hypertext Tranfer Protocol                                    |
+| [SMTP](#simple-mail-transfer-protocol-aka-smtp)                         | Simple Mail Tranfer Protocol                                  |
+| [POP](#post-office-protocol-3-aka-pop3)                                 | Post Office Protocol                                          |
+| [IMAP](#internet-message-access-protocol-aka-imap)                      | Internet Message Access Protocol                              |
+| [SMB](#server-message-blocking-protocol-aka-smb)                        | Server Message Blocking                                       |
+| [SNMP](#simple-network-management-protocol-aka-snmp)                    | Simple Network Management Protocol                            |
+| [NTP](#network-time-protocol-aka-ntp)                                   | Network Time Protocol                                         |
+| [TLS/SSL](#transport-layer-security--secure-socket-layer-aka-tlsssl)    | Transport Layer Security / Secure Socket Layer                |
+| ├ [TLS 1.2 - Handshake Protocol](#handshake-protocol-ssl-30---tls-12)   | SSL 3.0 - TLS 1.2 Handshake Protocol                          |
+| ├ [Change Cipher Protocol](#change-cipher-spec-protocol)                | SSL Change Cipher Protocol                                    |
+| ├ [TLS 1.3 - Handshake Protocol](#handshake-protocol-tls-13)            | TLS 1.3 Handshake Protocol                                    |
+| ├ [Alert Protocol](#alert-protocol)                                     | TLS/SSL Alert Protocol                                        |
+| └ [Record Protocol](#record-prtocol)                                    | TLS/SSL Record Layer Protocol                                 |
+| [HTTPS](#hypertext-transfer-protocol-over-tlsssl-aka-https)             | Hypertext Tranfer Protocol over TLS/SSL                       |
+| [IPsec](#internet-protocol-security-aka-ipsec)                          | Internet Protocol Security Suite                              |
+| ├ [IKEv1.0](#ikev10)                                                    | Internet Key Exchange Protocol ver 1.0                        |
+| ├ [IKEv2.0](#ikev20)                                                    | Internet Key Exchange Protocol ver 2.0                        |
+| ├ [AH Protocol](#authenticationi-header-ah-protocol)                    | Authentication Header Protocol                                |
+| └ [ESP](#encapsulation-security-protocol-esp)                           | Encapsulation Security Protocol                               |
+| [SSH](#secure-shell-aka-ssh)                                            | Secure Shell                                                  |
+| ├ [SSH Transport Layer Protocol](#ssh-transport-layer-protocol)         | SSH Transport Layer Protocol                                  |
+| ├ [SSH User Authentication Protocol](#ssh-user-authentication-protocol) | SSH User Authentication Protocol                              |
+| └ [SSH Communication Protocol](#ssh-connection-protocol)                | SSH Communication Protocol                                    |
+| [RDP](#remote-desktop-protocol-aka-rdp)                                 | Remote Desktop Protocol                                       |
+| [MS-SSTDS](#microsoft-sql-server-tubular-data-stream-aka-ms-sstds)      | Microsoft SQL Server Tubular Data Stream (MSSQL)              |
+| [LDAP](#lighweight-directory-access-protocol-aka-ldap)                  | Lighweight Directory Access protocol                          |
+| [Modbus](#modbus)                                                       | Modbus                                                        |
 
 [to Bibliography](#bibliography)
 
@@ -185,6 +185,7 @@ LLMNR provides name resolution ability inside the LAN when dns is unavialable/un
 - (As far as Im aware LLMNR works on IPv4 as well, check it...)
 + It was a misunderstanding with the wording.
 - (I think that by local-link you mean LAN then it's not the physical network)
++ Yes.
 ```
 
 ### HOW DOES IT WORK
@@ -1010,10 +1011,10 @@ That is one problem. There are many more:
 The SSL & TLS protocols are made up of 4 sub-protocols, 3 in a higher level and 1 in the lower level. They all work together coherently in order to provide the encryption service that is wanted. Each of the sub-protocols is responsible for something in the functionality of the SSL & TLS protocols:
 
 ```
-Handshake Protocol       -.                      Establish security parameters and session.              
-Change Cipher Protocol*  -|- HIGHER LAYER        Responsible for cipher changing negotiations.
-Alert Protocol           -'                      Responsible for alerting if there is an error/warning.
-Record Protocol          -- LOWER LAYER          This is the protocol that encrypts, compresses and ecapsulates the application data.
+Handshake Protocol       ─┐                      Establish security parameters and session.              
+Change Cipher Protocol*  ─┤► HIGHER LAYER        Responsible for cipher changing negotiations.
+Alert Protocol           ─┘                      Responsible for alerting if there is an error/warning.
+Record Protocol          ── LOWER LAYER          This is the protocol that encrypts, compresses and ecapsulates the application data.
 
 * Doesn't exist in TLS 1.3
 ```
@@ -1337,11 +1338,6 @@ Alright, first step!
 
 ### Connection Initialization & Key exchange
 ```
-┌┬─┐
-├┴─┤
-│◄►│
-│▼ │
-└──┘
 Since I want to draw another diagram I will do this in a code box. Let's try         C                                 S
 and do this simply step by step. The client will want to initiate a connection.      │ Identification String Exchange  │
 The client will send an 'Identification String Exchange' message, to                 │ ──────────────────────────────► │
@@ -1387,12 +1383,13 @@ The transport layer protocol is responsible for a few things, some of them we al
 >
 > Here is a diagram to explain how the protocol does that:
 > ```
-> seq# - packet sequence no.      ____________________SSH_PACKET____________________
-> pktl - packet len              |__________________2.MAC_____________________      |
-> pdl  - padding len             |       _____________1.ENCRYPTED_____________|     |
->  _________________             '______'______ _____ ______________ _________'_____'
-> |_____PAYLOAD_____|            |_seq#_|_pktl_|_pdl_|_CMPRSSD_PYLD_|_padding_|_MAC_|
->          '--------------------------------------------'
+> seq# - packet sequence no.     ┌────────────────────SSH─PACKET────────────────────┐
+> pktl - packet len              ├──────────────────2.MAC─────────────────────┐     │
+> pdl  - padding len             │      ┌─────────────1.ENCRYPTED─────────────┤     │
+> ┌─────────────────┐            ┌──────┬──────┬─────┬──────────────┬─────────┬─────┐
+> │     PAYLOAD     │            │ seq# | pktl │ pdl │ CMPRSSD PYLD │ padding │ MAC │
+> └─────────────────┘            └──────┴──────┴─────┴──────────────┴─────────┴─────┘
+>          └─────────────────────────────────────────────────┘
 > ```
 
 > <font size=4>**Saving Host Keys**</font>
@@ -1481,33 +1478,33 @@ The data in the RDP session is funneled through the 7 layer OSI model then it is
 To initiate a connection RDP performs a sort of handshake.
 
 ```
-.     Cli                                           Ser
-.      |                                             |
-.      | ------------------------------>             | ] Connection -
-.      |             <------------------------------ | ] Initiation
-.      |                                             |
-.      | ------------------------------>             | ] Basic Settings -
-.      |             <------------------------------ | ] Exchange
-.      |                                             |
-.      | ------------------------------>             | ] Channel -
-.      |             <------------------------------ | ] Connection
-.      |                                             |
-.      | ------------------------------>             | ] Security commencement
-.      |                                             |
-.      | ------------------------------>             | ] Secure Settings Exchange
-.      |                                             |
-.      |             <------------------------------ | ] Licensing
-.      |                                             |
-.      |             <------------------------------ | ] Capabilities -
-.      | ------------------------------>             | ] Exchange
-.      |                                             |
-.      | ------------------------------>             | ] Connection -
-.      |             <------------------------------ | ] Finalization
-.      |                                             |
-.      | ------------------------------>             | ] Data -
-.      |             <------------------------------ | ] Exchange
-.      |                                             |
-.      V                                             V
+.    Client                            Server
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Connection -
+.      │ ◄────────────────────────────── │ ] Initiation
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Basic Settings -
+.      │ ◄────────────────────────────── │ ] Exchange
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Channel -
+.      │ ◄────────────────────────────── │ ] Connection
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Security commencement
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Secure Settings Exchange
+.      │                                 │
+.      │ ◄────────────────────────────── │ ] Licensing
+.      │                                 │
+.      │ ◄────────────────────────────── │ ] Capabilities -
+.      │ ──────────────────────────────► │ ] Exchange
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Connection -
+.      │ ◄────────────────────────────── │ ] Finalization
+.      │                                 │
+.      │ ──────────────────────────────► │ ] Data -
+.      │ ◄────────────────────────────── │ ] Exchange
+.      │                                 │
+.      V                                 V
 ```
 
 > <font size=4>**Authentication**</font>
@@ -1566,16 +1563,16 @@ To initiate a connection RDP performs a sort of handshake.
 After finishing the handshake the client and server will communicate graphical data (from the server) and input data (from the client) on their respective channels. So a packet will look something like this:
 
 ```
- _________________________________________________________________________________________
-| Encrypted  ________________________________________________________________________     |
-|           | OSI over TCP (X.224) ________________________________________________  |    |
-|           |                     | MCS Layer (data is put into channel)           | |    |
-|           |                     |                __________________              | |    |
-|           |                     |               | PDU (data)       |             | |    |
-|           |                     |               |__________________|             | |    |
-|           |                     '________________________________________________' |    |
-|           '________________________________________________________________________'    |
-'_________________________________________________________________________________________'
+┌─────────────────────────────────────────────────────────────┐
+│ Encrypted ┌────────────────────────────────────────────────┐│
+│           │ OSI     ┌─────────────────────────────────────┐││
+│           │ over    │ MCS Layer (data is put into channel)│││
+│           │ TCP     │               ┌──────────────────┐  │││
+│           │ (X.224) │               │ PDU (data)       │  │││
+│           │         │               └──────────────────┘  │││
+│           │         └─────────────────────────────────────┘││
+│           └────────────────────────────────────────────────┘│
+└─────────────────────────────────────────────────────────────┘
 ```
 
 Obviously this is not the exact structure of an RDP packet, since the entire packet can not be encrypted for sake for transmission. But it does ilustrate the structure of "How does the protocol encapsulate it's information".
@@ -1649,41 +1646,39 @@ Overall, the flow of a connection may look something like this:
 
 ```
 .     Cli                                           Ser
-.      |                                             |
-.      |                                             |
-.      | ------------------------------>             | ] TCP
-.      |             <------------------------------ | ] Handshake
-.      |                                             |
-.      |                   PRELOGIN                  |
-.      |                                             |
-.      | ------------------------------>             | ] PRELOGIN
-.      |             <------------------------------ | ] 
-.      |                                             |
-.      | ------------------------------>             | ] PRELOGIN wrapping TLS
-.      |             <------------------------------ | ] 
-.      |                                             |
-.   ---+------------------ENCRYPTED------------------+---
-.      |                                             |
-.      |                    LOGIN                    |
-.      |                                             |
-.      | ------------------------------>             | ] LOGIN
-.      |             <------------------------------ | ]
-.      |                                             |
-.      |                  POST-LOGIN                 |
-.      |                                             |
-.      | ------------------------------>             | ] SQL Batch
-.      |             <------------------------------ | ] Row data
-.      |                                             |
-.      | ------------------------------>             | ] RPC call
-.      |             <------------------------------ | ] RPC data response
-.      |                                             |
-.      |                     ...                     |
-.      |                                             |
-.   ---+---------------UNTIL-DISCONNECT--------------+---
-.      |                                             |
-.      |                                             |
-.      |                                             |
-.      V                                             V
+.      │                                 │
+.      │                                 │
+.      │ ──────────────────────────────► │ ] TCP
+.      │ ◄────────────────────────────── │ ] Handshake
+.      │                                 │
+.      │             PRELOGIN            │
+.      │                                 │
+.      │ ──────────────────────────────► │ ] PRELOGIN
+.      │ ◄────────────────────────────── │ ] 
+.      │                                 │
+.      │ ──────────────────────────────► │ ] PRELOGIN wrapping TLS
+.      │ ◄────────────────────────────── │ ] 
+.      │                                 │
+.   ───┼────────────ENCRYPTED────────────┼───
+.      │                                 │
+.      │              LOGIN              │
+.      │                                 │
+.      │ ──────────────────────────────► │ ] LOGIN
+.      │ ◄────────────────────────────── │ ]
+.      │                                 │
+.      │            POST-LOGIN           │
+.      │                                 │
+.      │ ──────────────────────────────► │ ] SQL Batch
+.      │ ◄────────────────────────────── │ ] Row data
+.      │                                 │
+.      │ ──────────────────────────────► │ ] RPC call
+.      │ ◄────────────────────────────── │ ] RPC data response
+.      │                                 │
+.      │               ...               │
+.      │                                 │
+.   ───┼─────────UNTIL─DISCONNECT────────┼───
+.      │                                 │
+.      ▼                                 ▼
 ```
 
 
@@ -1794,9 +1789,10 @@ The Modbus protocol operates in a `client/server` model, the client would be the
 The way that message work in RTU mode is as follows:
 
 ```
- ___________________________________________________
-| 1  byte | 1  byte |       n bytes       | 2 bytes |
-|_srv_adr_|_opcode__|_Data________________|_CRC_____|
+┌─────────┬─────────┬─────────────────────┬─────────┐
+│ 1 byte  │ 1 byte  │ N bytes             │ 2 bytes │
+│ srv adr │ opcode  │ Data                │ CRC     │
+└─────────┴─────────┴─────────────────────┴─────────┘
 ```
 
 Let's break it down.
