--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -1171,7 +1171,7 @@ The whole process goes like this:
 
 ```diff
 - (Is the only purpose of the protocol is to create ecryption keys to symetrically encrypt the connection?)
-- (Stratesd checking this protocol but you wrote W-A-Y too much information summaries it)
+- (Started checking this protocol but you wrote W-A-Y too much information summaries it)
 ```
 
 ###### [Back to top](#bigous-protocolous)
