--- a/15. Firewalls.md
+++ b/15. Firewalls.md
@@ -26,9 +26,15 @@ The difference is in the simplicity, they both achieve the same goal. Stateful f
 
 **Stateless Firewall**
 
+| Pros                                                                                       	| Cons                                                                                                          	|
+|--------------------------------------------------------------------------------------------	|---------------------------------------------------------------------------------------------------------------	|
+| Very cheap                                                                                 	| Needs more loose rules.<br>ones only based on src ip, dst ip and protocols.                                   	|
+| very fast and doesn't use a lot of resources.<br>meaning they could handle large networks. 	| Stateless firewalls are blind to attacks that aren't<br>taking place in the protocol headers.                 	|
+| Easy to configure                                                                          	| Stateless firewalls are blind to overall suspicious<br>behavior of machines, since it inspects packet packet. 	|
 
 ```diff
 - (The intention was for you to write pros and cons about the firewall types)
 + Sorry I misunderstood ;)
 - (About the firewall rules I want to see a picture of the rules after the changes, and I can tell you from what I have read that there are more changes need to be made)
 ```
+[To firewall changes2.0](./Misc/Firewall_Changes.md)
