--- a/17. Promiscuous Mode.md
+++ b/17. Promiscuous Mode.md
@@ -4,9 +4,10 @@ Promiscuous mode is a setting on a Network Interface Card that tells it not to d
 
 Promiscuous mode isn't some alien technology that let's you sniff all packets going through the network, they still have to get to your NIC in order to sniff them. That means that we can perform some countermeasures:
 
-1. Switch, the switch forwards packets to the destination machines. Meaning that the promiscuous sniffer will only get packets destined to him anyways, and not anyone else's.
-2. If the Promicuous sniffer decides to perform some attack to bypass the switch (arp spoofing, ip spoofing, icmp redirection) we can try to fight those with the switch configurations as well. We may decide to limit a switch port to only 1 MAC address if we know it isn't going to be used by another switch, that way the attacker wont be able to perform arp spoofing very well.
+1. Switch, the switch forwards packets to the destination machines. Meaning that the promiscuous sniffer will only get packets destined to him anyways, and not anyone else's. If the Promicuous sniffer decides to perform some attack to bypass the switch (arp spoofing, ip spoofing, icmp redirection) we can try to fight those with the switch configurations as well. We may decide to limit a switch port to only 1 MAC address if we know it isn't going to be used by another switch, that way the attacker wont be able to perform arp spoofing very well.
+2. Actively scan for promiscuous sniffers on your network, in order to do that there are online tools vavilable like: Promqry, NetScanTools, PromiscDetect. These tools send packets to machines and check the response, based on responses they can accurately 
 
 ```diff
 - (1 and 2 are basically the same)
++ I changed it, another thing we can use are promiscouse detection tools.
 ```
