--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -1,14 +1,18 @@
 # IDS - Intrusion Detection System
 
-An intrusion Detection System is a network component that looks into network traffic and, based on certein methods, alerts when it detects malicious traffic.
-
-An intrusion detection system will usually be applied on a central network device like the firewall since you want to filter as much data as possible, but any device that can supports it can be an IDS.
+An intrusion Detection System is a network component that looks into network traffic and, based on certein methods, alerts when it detects malicious traffic.<br>
+It will usually be applied on a central network device like the firewall since you want to filter as much data as possible, but any device that can supports it can be an IDS.
 
 ```diff
 - (Is it a must to put it in a central location?)
++ No, it can be implemented anywhere in the network. But it is favorable to put it in a more central location in the network to make it able to analyze as much traffic as it can. 
 ```
 
-#### Host and Network Based
+An IDS can apply different methods in order to detect malicious activity:
+- Signatures: The IDS will sign each packet and compare them to a database of malicious packet signatures, this kind of detection can alert of valnurability exploitation of certein network protocol. This method may be applied online (real time)
+
+
+#### Host and Network Based IDS
 
 Host based IDS is a little different since it does not analyze networ traffic but application and computer logs to detect malicious activity. 
 
@@ -26,5 +30,6 @@ Detections of "intrusions" can be done in different methods, one of them is sign
 
 ```diff
 - (Write a bit more there is not enough information here)
++ I wrote more.
 - (Where is the snort rule explantion?)
 ```
