--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -1,5 +1,6 @@
-# IDS - Intrusion Detection System
+# INSTRUSION AND PREVENTION DETECTION SYSTEM
 
+## IDS - Intrusion Detection System
 An intrusion Detection System is a network component that looks into network traffic and, based on certein methods, alerts when it detects malicious traffic.<br>
 It will usually be applied on a central network device like the firewall since you want to filter as much data as possible, but any device that can supports it can be an IDS.
 
@@ -8,20 +9,20 @@ It will usually be applied on a central network device like the firewall since y
 + No, it can be implemented anywhere in the network. But it is favorable to put it in a more central location in the network to make it able to analyze as much traffic as it can. 
 ```
 
+### Network Intrustion Detection System
 An IDS can apply different methods in order to detect malicious activity:
-- Signatures: The IDS will sign each packet and compare them to a database of malicious packet signatures, this kind of detection can alert of valnurability exploitation of certein network protocol. This method may be applied online (real time)
+- **Signatures** The IDS will sign each packet and compare them to a database of malicious packet signatures, this kind of detection can alert of valnurability exploitation of certein network protocol. This method may be applied online (real time) or offline (analyzing pcaps or other stored packet data).
+- **Anomalies** Using neural network it can analyze the behavior of the network and detect most attackes by catching discrepancies from the usual pattern. Neural Networks can also learn from past mistakes which makes it a really useful method of detection.
 
+### Host Intrustion Detection System
+Host based IDS is a little different since it does not analyze network traffic but application and computer logs to detect malicious activity.
 
-#### Host and Network Based IDS
-
-Host based IDS is a little different since it does not analyze networ traffic but application and computer logs to detect malicious activity. 
 
 ## IPS - Intrusion Prevention System
 
 If an IDS is given the abilty to stop communication that it detects as malicious, it becomes an IPS. IPS' may sometimes get their analyses wrong and block communication on a *false positive*. However when it block malicious traffic as intended it is called a *true positive*.
 
-## Detection
-
+## Network Instursion Prevention System
 Detections of "intrusions" can be done in different methods, one of them is signing method:
 
 > In the signing method, the packet is digested by some hashing algorithm that outputs a `signature`. This signature is them compared to a database containing hundreds or thousands of signatures of malicious packets.
