--- a/16. IDS IPS.md
+++ b/16. IDS IPS.md
@@ -6,28 +6,35 @@ It will usually be applied on a central network device like the firewall since y
 
 ```diff
 - (Is it a must to put it in a central location?)
-+ No, it can be implemented anywhere in the network. But it is favorable to put it in a more central location in the network to make it able to analyze as much traffic as it can. 
++ No, it can be implemented anywhere in the network. But it is favorable to put it in a more central location in the network to make it able to analyze as much traffic as it can.
 ```
 
-### Network Intrustion Detection System
-An IDS can apply different methods in order to detect malicious activity:
-- **Signatures** The IDS will sign each packet and compare them to a database of malicious packet signatures, this kind of detection can alert of valnurability exploitation of certein network protocol. This method may be applied online (real time) or offline (analyzing pcaps or other stored packet data).
-- **Anomalies** Using neural network it can analyze the behavior of the network and detect most attackes by catching discrepancies from the usual pattern. Neural Networks can also learn from past mistakes which makes it a really useful method of detection.
+### NIDS - Network-vased Intrustion Detection System
+A Network-based IDS can apply different methods in order to detect malicious activity:
+- **Signatures** The IDS will sign each packet and compare them to a database of malicious packet signatures, this kind of detection can alert of valnurability exploitation of certein network protocol. This method may be applied online (real time) or offline (analyzing pcaps or other stored packet data). A fault with this sytem is that it wont be able to recognize new attacks.
+- **Anomalies** Using neural network it can analyze the behavior of the network and detect most attackes by catching discrepancies from a set baseline network activity. Neural Networks can also learn from past mistakes which makes it a really useful method of detection. This detection method is prone to produce a lot of false-positives.
+- **Policy** An IDS policy is a stand-alone set of rules that determines wether a networking sessions is allowed or not. It is standalone but can omply with other existing policies (like Firewall, Router and more.)
 
-### Host Intrustion Detection System
-Host based IDS is a little different since it does not analyze network traffic but application and computer logs to detect malicious activity.
+### HIDS - Host-based Intrustion Detection System
+A Host-based IDS detects discrepancies and anomalies in the host, it looks in the Operating System and possibly even network interfaces. It operates very similarly to the NIDS.<br>
+It works by looking at verious points of interest at the system leve:
+- System & Security Logs.
+- Valuable Files list.
+- Network Interace Card.
+- Processes.
+- Memory.
+- File Metadata.
 
+There are a lot of ways it operates in:
+- **Sinatures** The HIDS will have a list of valuable system objects (like files, registry keys and such) to monitor, it will remember each objects attributes and also hash the file. Then it can monitor these system objects and see if any changes have been made.
+- **Memory** HIDS can look at certein regions in memory and alert if they have been changed.
+- **Logs** HIDS can look at various end point logs and alert of any suspicious activity, like bruteforce attacks.
 
 ## IPS - Intrusion Prevention System
 
-If an IDS is given the abilty to stop communication that it detects as malicious, it becomes an IPS. IPS' may sometimes get their analyses wrong and block communication on a *false positive*. However when it block malicious traffic as intended it is called a *true positive*.
+Intrusion Prevention System operated like ID Systems however they will take action instead of just alerting the SIEM. It's 
 
 ## Network Instursion Prevention System
-Detections of "intrusions" can be done in different methods, one of them is signing method:
-
-> In the signing method, the packet is digested by some hashing algorithm that outputs a `signature`. This signature is them compared to a database containing hundreds or thousands of signatures of malicious packets.
-
-> Another method for detection is detecting anomalous se of certein protocols and how they deviate from the normal use case of those prtocols.
 
 ```diff
 - (Write a bit more there is not enough information here)
